# stam-python

./: .gitignore  .readthedocs.yaml  Cargo.toml  Makefile  README.md  pyproject.toml  stam.pyi  test.py  tutorial.ipynb  tutorial.md
.github/workflows/: wheels.yml
docs/: conf.py  index.rst  stam.rst
py_src/: __init__.py  __init__.pyi
src/: annotation.rs  annotationdata.rs  annotationdataset.rs  annotationstore.rs  config.rs  iterparams.rs  lib.rs  query.rs  resources.rs  selector.rs  substore.rs  textselection.rs
